fix: typos in swagger docs schemas
